--- a/DefectServer/Views/Home/Index.cshtml
+++ b/DefectServer/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
     <div class="col-md-4">
         <h2>Manage Defects</h2>
         <p>This function allows you to view the defects that have been uploaded from the mobile devices.</p>
-        <p>@Html.ActionLink("List of Defects","List")</p>
+        <p>@Html.ActionLink("List of Jobs","List")</p>
     </div>
 </div>
