--- a/DefectServer/Views/Home/List.cshtml
+++ b/DefectServer/Views/Home/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DefectServer.Models.Defect>
+﻿@model IEnumerable<DefectServer.Models.Job>
 
 @{
     ViewBag.Title = "List";
@@ -9,13 +9,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.Id)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DateCreated)
@@ -29,13 +26,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Location)
+            @Html.DisplayFor(modelItem => item.Id)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DateCreated)
@@ -44,11 +38,12 @@
             @Html.DisplayFor(modelItem => item.DateModified)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
-            @*|
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+@*|
+    @Html.ActionLink("Details", "Details", new { id=item.Id })
+    @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
         </td>
     </tr>
 }
 
 </table>
+@Html.ActionLink("Create", "Create")
