--- a/DefectServer/Views/Users/Details.cshtml
+++ b/DefectServer/Views/Users/Details.cshtml
@@ -1,45 +1,37 @@
-﻿@model DefectServer.Models.Defect
+﻿@model DefectServer.Models.User
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "Details";
 }
 
-<h2>View</h2>
+<h2>Details</h2>
 
 <div>
-    <h4>Defect</h4>
+    <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Location)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.SurName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.SurName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImageName)
-        </dd>
-
-        <dt>
-            Image
-        </dt>
-
-        <dd>
-            <img src="~/Images/@Html.DisplayFor(model => model.ImageName)" />
+            @Html.DisplayFor(model => model.Email)
         </dd>
 
         <dt>
@@ -61,5 +53,6 @@
     </dl>
 </div>
 <p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
